Add an anchor link

--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -75,6 +75,8 @@
           });
 
         </script>
+        
+        <h3 id="scientific-python-community-calendar">Scientific Python community events</h3>
         <div id='community_calendar'></div>
 
         <h3 id="subscribe-google-calendar">Google Calendar</h3>
